# vibecode-ai-system

./: .gitignore  AGENT_HANDOFF.md  CONTEXT-MAP.md  PROJECT_CONTEXT.md  PROJECT_STATUS.md  README.md  SESSION-LOG.md  SESSION_HANDOFF.md  SESSION_HANDOVER.md  requirements.txt  vibe.py
.claude/: settings.local.json
.prompts/: CONTEXT-MAP.md  SESSION-LOG.md
.vibecode/: context.json
agents/: __init__.py  antigravity_agent.py  api_agent.py  batch_agent.py  cli_agent.py
core/: __init__.py  context_manager.py  orchestrator.py  swarm_dispatch.py  task_router.py  workflow_engine.py
desktop-app/: OAUTH_INTEGRATION_FINAL_STEPS.md  mcp_config.json  package-lock.json  package.json  vitest.config.ts
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/scripts/: generate_workflow.js
desktop-app/src-tauri/src/: api_server.rs  lib.rs  oauth_commands_impl.rs  workflow_generator.rs
desktop-app/src-tauri/src/antigravity/: mod.rs  process_finder.rs  quota_service.rs  types.rs
desktop-app/src-tauri/src/services/: account_service.rs  google_api_service.rs  mod.rs  oauth_server.rs  oauth_service.rs
docs/: AGENT-SYSTEM-STRATEGIC-ASSESSMENT.md  WORKFLOW-OPERATING-MANUAL.md
tests/: __init__.py  conftest.py  test_batch_agent.py  test_context_manager.py  test_task_router.py
utils/: __init__.py  cost_tracker.py  logger.py
vscode-extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
workflows/: bugfix.yaml  code-review.yaml  feature.yaml  ocean-edu-feature.yaml  (+1 more)
(+107 files in other folders)
