[package]
name = "vibecode-desktop"
version = "1.0.0"
description = "Vibecode AI - Intelligent Development Assistant by Valentina Nie"
authors = ["Valentina Nie"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# OAuth & Security
tiny_http = "0.12"  # Local HTTP server for OAuth callback
ring = "0.17"
base64 = "0.21"
rand = "0.8"
serde_urlencoded = "0.7"
sha2 = "0.10"
machine-uid = "0.3"
urlencoding = "2.1"
open = "5"  # Open browser for OAuth

# REST API Server (Phase 5)
warp = "0.3"

# Skills Ecosystem Enhancement
zip = "0.6"

